--- a/config/database.yml
+++ b/config/database.yml
@@ -11,6 +11,7 @@ default: &default
 
 development:
   <<: *default
+  adapter: sqlite3
   database: dev_yt
 
 # Warning: The database defined as "test" will be erased and
